added some text regarding sentiment

--- a/Assignment2/sg22_assignment_2_ima.ipynb
+++ b/Assignment2/sg22_assignment_2_ima.ipynb
@@ -563,7 +563,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to get more information regarding the network from the degree distributions, we can try to approximate the [exponent of the degree distribution](http://networksciencebook.com/chapter/4#power-laws). The exponent can give insigth in the [regime](http://networksciencebook.com/chapter/4#degree-exponent) our netowrk is in.  \n",
+    "Looking at the histograms of the in- and out- degree distribution, we can note that the out-degree distribution looks more like that of a random network. It follows a Poisson like distribution. The in-degree distribution is more in line with a real world network. A log-log plot, shown in the following, makes this easier to see.\n",
+    "\n",
+    "In order to get more information regarding the network from the degree distributions, we can try to approximate the [exponent of the degree distribution](http://networksciencebook.com/chapter/4#power-laws). The exponent can give insigth in the [regime](http://networksciencebook.com/chapter/4#degree-exponent) our network is in.  \n",
     "\n",
     "In order to estimate the slope of the incoming degree distribution, which is asked in the question, the package `powerlaw` will be used."
    ]
@@ -1674,7 +1676,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to calculate the sentiment for a character, its text needs to be tokenized. Then, each word is looked up from the `LabMT.txt` file and its sentiment is added in a list. Finally, the mean of this sentiments list is calculated and returned as the chaarcter's page sentiment. The way the sentimentis calculated for each word is also described in [Temporal Patterns of Happiness and Information in a Global Social Network: Hedonometrics and Twitter](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0026752#s1). The following functions are defined to make the sentiment calculations:"
+    "In order to calculate the sentiment for a character, its text needs to be tokenized. No stopwords are removed.  Then, each word is looked up from the `LabMT.txt` file and its sentiment is added in a list. Finally, the mean of this sentiments list is calculated and returned as the chaarcter's page sentiment. The way the sentimentis calculated for each word is also described in [Temporal Patterns of Happiness and Information in a Global Social Network: Hedonometrics and Twitter](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0026752#s1). The following functions are defined to make the sentiment calculations:"
    ]
   },
   {
@@ -2288,6 +2290,13 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The fact that the statistics regarding the sentiment of good and bad characters are close, could be attributed to keeping words that are neutral in regards to sentiment. It is expected that removing words with sentiment close to the mean, or avoiding calculating the sentiment of stopwords, the sentiment statistics would be more distrinct."
    ]
   },
   {
