added some summarizing(?) text in the end regarding sentimetn analysis

--- a/Assignment2/sg22_assignment_2_ima.ipynb
+++ b/Assignment2/sg22_assignment_2_ima.ipynb
@@ -1976,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -2060,81 +2060,26 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Airstrike</td>\n",
-       "      <td>Dmitri Bukharin</td>\n",
-       "      <td>Marvel</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Air-Walker</td>\n",
-       "      <td>Air-Walker</td>\n",
-       "      <td>Marvel</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Liz Allan</td>\n",
-       "      <td>Liz Allan</td>\n",
-       "      <td>Marvel</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Amatsu-Mikaboshi</td>\n",
-       "      <td>Amatsu-Mikaboshi (comics)</td>\n",
-       "      <td>Marvel</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>American Dream</td>\n",
-       "      <td>American Dream (comics)</td>\n",
-       "      <td>Marvel</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      CharacterName                   WikiLink universe  woman  man  good  bad\n",
-       "0       Abomination    Abomination (character)   Marvel      0    1     0    1\n",
-       "1     Absorbing Man              Absorbing Man   Marvel      0    1     0    1\n",
-       "2            Achebe            Achebe (comics)   Marvel      0    0     0    0\n",
-       "3             Agent             Agent (comics)   Marvel      0    1     1    0\n",
-       "4           Agent X    Agent X (Marvel Comics)   Marvel      0    1     1    0\n",
-       "5         Airstrike            Dmitri Bukharin   Marvel      0    0     0    0\n",
-       "6        Air-Walker                 Air-Walker   Marvel      0    1     0    1\n",
-       "7         Liz Allan                  Liz Allan   Marvel      0    0     0    0\n",
-       "8  Amatsu-Mikaboshi  Amatsu-Mikaboshi (comics)   Marvel      0    0     0    0\n",
-       "9    American Dream    American Dream (comics)   Marvel      0    0     0    0"
+       "   CharacterName                 WikiLink universe  woman  man  good  bad\n",
+       "0    Abomination  Abomination (character)   Marvel      0    1     0    1\n",
+       "1  Absorbing Man            Absorbing Man   Marvel      0    1     0    1\n",
+       "2         Achebe          Achebe (comics)   Marvel      0    0     0    0\n",
+       "3          Agent           Agent (comics)   Marvel      0    1     1    0\n",
+       "4        Agent X  Agent X (Marvel Comics)   Marvel      0    1     1    0"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "metadata_df.head(10) # Quick overview of how the loaded csv looks as pandas dataframe"
+    "metadata_df.head(5) # Quick overview of how the loaded csv looks as pandas dataframe"
    ]
   },
   {
@@ -2220,7 +2165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From eyballing the basic statistics of the good and bad characters, it does not seem easy to separate characters based on sentiment. The calculated sentiment values using the `LabMT` dataframe are pretty similar. This is also visible in the following histograms for the two character groups:"
+    "From eyeballing the basic statistics of the good and bad characters, it does not seem easy to separate characters based on sentiment. The calculated sentiment values using the `LabMT` dataframe are pretty similar. This is also visible in the following histograms for the two character groups:"
    ]
   },
   {
@@ -2471,6 +2416,27 @@
    "metadata": {},
    "source": [
     "Again, hypothesis $H2$ holds for all repetitions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Question__:\n",
+    "> Write a short paragraph reflecting on your findings."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Answer__:  \n",
+    "\n",
+    "Using sentiment scores from `LabMT`, the sentiment for the good and bad characters was computed. Using the provided character labels as ground truth, the two hypotheses were verified via simulation:  \n",
+    "* Good characters on average have higher sentiment score.  \n",
+    "* Bad characters on average have lower sentiment score.  \n",
+    "\n",
+    "This would make it possible to make an educated guess whether a given character is most probably good or bad, given that the sentiment statistics are known for the whole character group."
    ]
   },
   {
