changes in the separators from dashes to pluses

--- a/Project/2_episodes_scripts.ipynb
+++ b/Project/2_episodes_scripts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 8,
    "id": "4cb2cb4c",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "id": "c8e5a0f3",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 10,
    "id": "f984cf2a",
    "metadata": {},
    "outputs": [],
@@ -42,8 +42,8 @@
     "    '''\n",
     "    Input is just the html page, without action added.\n",
     "    return the text of the episode script. \n",
-    "    Always starts with 5 dashes. And ends with 5 dashes\n",
-    "    Scenes are separated by also 5 dashes\n",
+    "    Always starts with 5 +. And ends with 5 +\n",
+    "    Scenes are separated by also 5 +\n",
     "    '''\n",
     "    raw_html = requests.get(script_url)\n",
     "\n",
@@ -62,9 +62,9 @@
     "            \n",
     "            for mid in mids:\n",
     "                if len(mid.text)<=2:\n",
-    "                    text += '-'*5 + '\\n'\n",
+    "                    text += '+'*5 + '\\n'\n",
     "                text += mid.text + '\\n'\n",
-    "            text += '-'*5\n",
+    "            text += '+'*5\n",
     "\n",
     "        return text\n",
     "        \n",
@@ -76,9 +76,9 @@
     "    text = ''\n",
     "    for mid in mids:\n",
     "        if len(mid.text)<=2:\n",
-    "            text += '-'*5 + '\\n'\n",
+    "            text += '+'*5 + '\\n'\n",
     "        text += mid.text + '\\n'\n",
-    "    text += '-'*5\n",
+    "    text += '+'*5\n",
     "\n",
     "    return text"
    ]
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "id": "d5c1a014",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts exists\n"
+      "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts\n"
      ]
     }
    ],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 12,
    "id": "529e4708",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 13,
    "id": "48087487",
    "metadata": {},
    "outputs": [],
@@ -181,14 +181,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 14,
    "id": "f8e13bd4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4f17eaab3b84983813414f3e310b74c",
+       "model_id": "40f22194919840f19a02fa0714b8f9e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,15 +203,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts/1\n",
-      "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts/2\n",
-      "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts/3\n",
-      "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts/4\n",
-      "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts/5\n",
-      "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts/6\n",
-      "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts/7\n",
-      "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts/8\n",
-      "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts/9\n",
+      "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts/01\n",
+      "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts/02\n",
+      "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts/03\n",
+      "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts/04\n",
+      "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts/05\n",
+      "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts/06\n",
+      "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts/07\n",
+      "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts/08\n",
+      "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts/09\n",
       "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts/10\n",
       "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts/11\n",
       "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Scripts/12\n",
@@ -241,6 +241,9 @@
     "    # Get the name of the season \n",
     "#     ses_dir_name = link_name.split('/')[-1]\n",
     "    ses_dir_name = str(season)\n",
+    "    if season <10:\n",
+    "        ses_dir_name = '0'+ses_dir_name\n",
+    "        \n",
     "    \n",
     "    # Directory to create\n",
     "    season_dir_path = scripts_path / ses_dir_name\n",
@@ -263,7 +266,9 @@
     "        # Get the name of the episode. Add its number in the beginning \n",
     "        fname = link_name_ep.split('/')[-2].replace('?', '').replace('\\'', '').replace('.', '') # It has script added in the end\n",
     "        fname = fname.replace(':', \"_\")\n",
-    "        ep_dir_name = str(episode) + \"_\" + fname + '.txt' \n",
+    "        ep_dir_name = str(episode) + \"_\" + fname + '.txt'\n",
+    "        if episode<10:\n",
+    "            ep_dir_name = str(0)+ep_dir_name\n",
     "        \n",
     "        # Directory to create\n",
     "        episode_dir_path = season_dir_path / ep_dir_name\n",
