--- a/Project/3_create_network_from_scripts.ipynb
+++ b/Project/3_create_network_from_scripts.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "b150ff94",
+   "id": "4f540018",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "272b8233",
+   "id": "f21a63fd",
    "metadata": {},
    "source": [
     "The idea is to create an undirected network from the characters when they interact in the same scene. The scene is separated by 5 dashes in the scripts text files. Undirected because since they partake in the scene and conversation, there is no sense of direction. Like a relationship."
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05dc1041",
+   "id": "dca2def4",
    "metadata": {},
    "source": [
     "The idea is to crawl all folders in the Scripts dir. In each season, open each script txt file. Then read the file. Find the sections between the 5 dashes. Now the more difficult part: create a pandas dataframe that logs these interactions, preferrably without themselves. Can be done eg. by creating a list of identified characters."
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1afd90a5",
+   "id": "ebc10440",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32f58093",
+   "id": "6d588f4e",
    "metadata": {},
    "source": [
     "Create also a directory for the relationships to be saved in:"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "ccc8c073",
+   "id": "7865600e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47dbbeae",
+   "id": "9a07d6b8",
    "metadata": {},
    "source": [
     "We are only interested in the names of the characters here. So we can create a dictionary with keys the full name and values the first name. Or maybe we could create two lists:"
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "bef85330",
+   "id": "ff60e316",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "da976e37",
+   "id": "8b45c5c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "94e03f71",
+   "id": "f80c4aaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "03c1a15f",
+   "id": "621cb042",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "7f00894c",
+   "id": "edd2d870",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "ac48eaf5",
+   "id": "4341d5ab",
    "metadata": {},
    "outputs": [
     {
@@ -587,13 +587,13 @@
     "total_relationships_dict_list = pd.DataFrame( np.sort(total_relationships_dict_list.values, axis=1), columns=total_relationships_dict_list.columns )\n",
     "total_relationships_dict_list['weight'] = 1\n",
     "total_relationships_dict_list = total_relationships_dict_list.groupby(['source', 'target'], sort=False, as_index=False).sum()\n",
-    "total_relationships_dict_list.to_csv(season_path.as_posix()+'total_relationships'+'.csv')"
+    "total_relationships_dict_list.to_csv(rel_path.as_posix()+'/'+'total_relationships'+'.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "6a13fdcc",
+   "id": "3d33fc1b",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7776efc7",
+   "id": "9b6473e5",
    "metadata": {},
    "outputs": [],
    "source": []
