some more code, basics of visualiz

--- a/Project/4_network_from relationships.ipynb
+++ b/Project/4_network_from relationships.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b9803c0b",
+   "id": "29f24a80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54c6683e",
+   "id": "8c25bcb9",
    "metadata": {},
    "source": [
     "For now I will work with the total relationships. I load the csv in a pandas dataframe:"
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1bd67aaf",
+   "id": "cdb975cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6b5da03a",
+   "id": "153c98a4",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61895e95",
+   "id": "043f4c4b",
    "metadata": {},
    "source": [
     "Now we can create a network by [using the relationship dataframe as edgelist](https://networkx.org/documentation/stable/reference/generated/networkx.convert_matrix.from_pandas_edgelist.html) and the weight as an edge attribute to show relationship strength:"
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "0ca185f2",
+   "id": "50621a5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fed6d2e9",
+   "id": "96a2348f",
    "metadata": {},
    "source": [
     "Initial network statistics, number of nodes, edges, etc:"
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "3691408e",
+   "id": "e6a0c7b7",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfac423b",
+   "id": "a2e75e6e",
    "metadata": {},
    "source": [
     "Simple visualisation for the network:"
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "eae21afa",
+   "id": "fb430cf2",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e179b811",
+   "id": "7bd8a511",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "0f948ac4",
+   "id": "3521b007",
    "metadata": {},
    "outputs": [
     {
@@ -220,12 +220,152 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c7b31131",
+   "metadata": {},
+   "source": [
+    "I have also found this [library](https://pyvis.readthedocs.io/en/latest/) that can be used with networkx and also provides nice visuals. I used code from the [tutorial](https://pyvis.readthedocs.io/en/latest/tutorial.html)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9c6650e0",
+   "execution_count": 30,
+   "id": "e3a97a56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pyvis\n",
+      "  Downloading pyvis-0.3.1.tar.gz (748 kB)\n",
+      "     -------------------------------------- 748.9/748.9 kB 6.8 MB/s eta 0:00:00\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'done'\n",
+      "Requirement already satisfied: jinja2>=2.9.6 in c:\\users\\user\\anaconda3\\lib\\site-packages (from pyvis) (2.11.3)\n",
+      "Requirement already satisfied: networkx>=1.11 in c:\\users\\user\\anaconda3\\lib\\site-packages (from pyvis) (2.8.7)\n",
+      "Requirement already satisfied: ipython>=5.3.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from pyvis) (7.33.0)\n",
+      "Collecting jsonpickle>=1.4.1\n",
+      "  Downloading jsonpickle-2.2.0-py2.py3-none-any.whl (39 kB)\n",
+      "Requirement already satisfied: pickleshare in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipython>=5.3.0->pyvis) (0.7.5)\n",
+      "Requirement already satisfied: traitlets>=4.2 in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipython>=5.3.0->pyvis) (5.4.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipython>=5.3.0->pyvis) (0.4.5)\n",
+      "Requirement already satisfied: setuptools>=18.5 in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipython>=5.3.0->pyvis) (65.4.1)\n",
+      "Requirement already satisfied: pygments in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipython>=5.3.0->pyvis) (2.13.0)\n",
+      "Requirement already satisfied: backcall in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipython>=5.3.0->pyvis) (0.2.0)\n",
+      "Requirement already satisfied: jedi>=0.16 in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipython>=5.3.0->pyvis) (0.18.1)\n",
+      "Requirement already satisfied: matplotlib-inline in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipython>=5.3.0->pyvis) (0.1.6)\n",
+      "Requirement already satisfied: decorator in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipython>=5.3.0->pyvis) (5.1.1)\n",
+      "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipython>=5.3.0->pyvis) (3.0.31)\n",
+      "Requirement already satisfied: MarkupSafe>=0.23 in c:\\users\\user\\anaconda3\\lib\\site-packages (from jinja2>=2.9.6->pyvis) (1.1.1)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from jedi>=0.16->ipython>=5.3.0->pyvis) (0.8.3)\n",
+      "Requirement already satisfied: wcwidth in c:\\users\\user\\anaconda3\\lib\\site-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython>=5.3.0->pyvis) (0.2.5)\n",
+      "Building wheels for collected packages: pyvis\n",
+      "  Building wheel for pyvis (setup.py): started\n",
+      "  Building wheel for pyvis (setup.py): finished with status 'done'\n",
+      "  Created wheel for pyvis: filename=pyvis-0.3.1-py3-none-any.whl size=755835 sha256=a9582055803ade12bf8380ba01948e25242fdd0526a9aa8ed04d434cf038d9d7\n",
+      "  Stored in directory: c:\\users\\user\\appdata\\local\\pip\\cache\\wheels\\55\\7b\\4b\\dc896cf96ad07e0dc92d30e1984ab583c0d0feec208756e2b2\n",
+      "Successfully built pyvis\n",
+      "Installing collected packages: jsonpickle, pyvis\n",
+      "Successfully installed jsonpickle-2.2.0 pyvis-0.3.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pyvis\n",
+    "from pyvis.network import Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "de131254",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Local cdn resources have problems on chrome/safari when used in jupyter-notebook. \n"
+     ]
+    }
+   ],
+   "source": [
+    "net = Network(notebook=True, width='1000px', height='700px',)\n",
+    "net.from_nx(G)\n",
+    "# net.show('south_park.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "1620f746",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "degrees_dict = dict(G.degree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d5570ef1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Kyle': 38,\n",
+       " 'Stan': 36,\n",
+       " 'Cartman': 36,\n",
+       " 'Ike': 17,\n",
+       " 'Kenny': 32,\n",
+       " 'Jason': 15,\n",
+       " 'Wendy': 22,\n",
+       " 'Liane': 24,\n",
+       " 'Jimbo': 27,\n",
+       " 'Ned': 14,\n",
+       " 'Randy': 37,\n",
+       " 'Pip': 16,\n",
+       " 'Big Gay Al': 10,\n",
+       " 'Shelly': 11,\n",
+       " 'Mephesto': 11,\n",
+       " 'Sharon': 26,\n",
+       " 'Sheila': 26,\n",
+       " 'Bebe': 17,\n",
+       " 'Carol': 16,\n",
+       " 'Stuart': 20,\n",
+       " 'Gerald': 28,\n",
+       " 'Saddam': 1,\n",
+       " 'Scott': 12,\n",
+       " 'Barbrady': 15,\n",
+       " 'Tweek': 21,\n",
+       " 'Tolkien': 23,\n",
+       " 'Jimmy': 26,\n",
+       " 'Butters': 31,\n",
+       " 'Mackey': 12,\n",
+       " 'Timmy': 25,\n",
+       " 'Heidi': 22,\n",
+       " 'Linda': 18,\n",
+       " 'Stephen': 26,\n",
+       " 'Tuong Lu Kim': 13,\n",
+       " 'Karen': 8,\n",
+       " 'Nelson': 4,\n",
+       " 'Principal': 1,\n",
+       " 'Garrison': 14,\n",
+       " 'Betsy': 5,\n",
+       " 'Harrison': 5,\n",
+       " 'Maxi': 5}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "degrees_dict"
+   ]
   }
  ],
  "metadata": {
